--- a/.eslintrc
+++ b/.eslintrc
@@ -28,9 +28,10 @@
     "comma-dangle": [0],
     "max-len": [1, 150],
     "no-param-reassign": [0],
-    "no-underscore-dangle": [2, { "allow": ["_password", "_isNew"] }],
+    "no-underscore-dangle": [2, { "allow": ["_password", "_isNew", "_id"] }],
     "object-shorthand": [0],
-    "func-names": [0]
+    "func-names": [0],
+    "newline-per-chained-call": [0]
   },
   "parserOptions": {
     "ecmaFeatures": {
