--- a/package.json
+++ b/package.json
@@ -28,15 +28,24 @@
     "cors": "^2.7.1",
     "diacritics": "^1.3.0",
     "express": "^4.13.3",
+    "express-validation": "^1.0.2",
     "express-xml-bodyparser": "^0.3.0",
     "helmet": "^3.9.0",
     "ip": "^1.1.5",
+    "joi": "^13.0.2",
+    "jsonwebtoken": "^8.1.0",
+    "lodash": "^4.17.4",
     "method-override": "^2.3.10",
     "moment": "^2.19.2",
     "mongoose": "^4.13.5",
     "morgan": "^1.8.0",
+    "multer": "^1.3.0",
+    "node-xlsx": "^0.11.2",
+    "nodemailer": "^4.4.0",
     "public-ip": "^2.3.5",
-    "resource-router-middleware": "^0.6.0"
+    "qrcode": "^1.0.0",
+    "resource-router-middleware": "^0.6.0",
+    "xlsx": "^0.11.10"
   },
   "devDependencies": {
     "babel-cli": "^6.9.0",
