--- a/.eslintrc
+++ b/.eslintrc
@@ -31,7 +31,9 @@
     "no-underscore-dangle": [2, { "allow": ["_password", "_isNew", "_id"] }],
     "object-shorthand": [0],
     "func-names": [0],
-    "newline-per-chained-call": [0]
+    "newline-per-chained-call": [0],
+    "object-curly-newline": [0, { "multiline": true, "either": true, "minProperties": 10 }],
+    "no-shadow": [2, {"builtinGlobals": false, "hoist": "functions", "allow": ["error"]}]
   },
   "parserOptions": {
     "ecmaFeatures": {
