--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "dist",
   "scripts": {
     "dev": "nodemon -w src --exec \"NODE_ENV=development DEBUG=App,$DEBUG babel-node src --presets es2015,stage-0\"",
+    "start": "nodemon -w src --exec \"NODE_ENV=production DEBUG=App,$DEBUG babel-node src --presets es2015,stage-0\"",
     "build": "babel src -s -D -d dist --presets es2015,stage-0",
-    "start": "node dist",
     "prestart": "npm run -s build",
     "test": "eslint src",
     "lint": "eslint --ext .js src",
